--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-mvc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'javax.transaction:javax.transaction-api:1.3'
-	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'  // ou a versão mais recente
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'  // ou a versão mais recente
+	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'  
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' 
+	implementation 'org.springframework.boot:spring-boot-starter-actuator' 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	runtimeOnly 'org.postgresql:postgresql'
