--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=hubspot_integration
+server.port=3333
+hubspot.client_id="INSERT-YOUR-CLIENT-ID"
+logging.level.org.springframework.security=DEBUG
